assets/css/style.css
/* ... */
/* media query for screen size 950px and under */

@media screen and (max-width: 950px) {

    /* hero image */

    /* hero image animation - Slow image pan from left to right */

    @keyframes hero-diagonal-move {
        0% {
            background-position: 0% 80%;
        }

        100% {
            background-position: 50% 20%;
        }
    }

    /* welcome section */

    /* welcome section images */

    #welcome-image-box {
        justify-content: center;
        gap: 0;
    }

    #welcome-image-box h3 {
        text-align: center;
    }



    /* other information section */

    #parking-information {
        flex-direction: column;
        gap: 3rem;
    }

}

/* media query for screen size 650px and under */

@media screen and (max-width: 650px) {

    /* header title & navigation links */

    /* title */

    h1 {
        position: inherit;
        margin-top: 0.5rem;
        font-size: 30px;
    }

    header img {
        height: 35px;
        margin-right: 17rem;
        position: absolute;
    }

    /* navigation links */

    nav~div {
        order: 1;
        width: 100%;
        margin-left: 10%;
    }

    nav a {
        padding: 1rem 1rem;
        margin: 0 0.5rem 0.5rem 0.5rem;
        font-size: 16px;
    }

    /* hero image */

    #hero-image-box {
        height: 400px;
        width: 100%;
        overflow: hidden;
    }

    /* hero image animation - Slow image pan from left to right */

    @keyframes hero-diagonal-move {
        0% {
            background-position: 50% 80%;
        }

        100% {
            background-position: 50% 20%;
        }
    }

    /* welcome section */

    /* welcome section text */

    #welcome-section-text-one h2 {
        text-align: left;
        padding-bottom: 1rem;
    }

    #welcome-section-text-one p {
        text-align: left;
    }

    #welcome-section-text-two h2 {
        padding-bottom: 1rem;
    }

    #welcome-section-text-extend {
        text-align: left;
    }

    #welcome-section-text-challenge {
        text-align: left;
    }

    #welcome-section-text-challenge p {
        text-align: left;
    }

    #welcome-section-text-challenge h2 {
        text-align: left;
    }


    /* welcome section images */

    #welcome-image-box h3 {
        text-align: center;
    }

    #welcome-image-box {
        gap: 0;
    }

    /* accommodation section */

    .accommodation-box {
        margin: 0.5rem;
        padding: 0.5rem;
        width: auto;
    }

    #accommodation-two-outer {
        background-image: url(../images/dalecote.jpg);
        background-size: cover;
        background-repeat: no-repeat;
        background-attachment: fixed;
        background-position: 30% 50%;
    }

    /* other information */

    #parking-image-outer {
        height: 150px;
        width: 250px;
    }


    /* footer */

    footer {
        height: 6rem;
    }

    footer img {
        height: 0;
        width: 0;
    }

    /* social media links  */

    #footer-links {
        gap: 1.5rem;
        align-self: center;
    }

    footer i {
        font-size: 60px;
    }

    .logo-wrap {
        height: 0;
        width: 0;
    }

    /* walks page */

    .walks-section li {
        padding: 0.5rem 0.5rem;
    }

    .walks-section ul {
        padding: 0.5rem 0.5rem;
    }

    .list-box {
        width: 100%;
    }

    #walks-challenge .list-box,
    #walks-penyghent .list-box,
    #walks-whernside .list-box,
    #walks-ingleborough .list-box {
        border: none;
    }

    #walks-challenge h2,
    #walks-penyghent h2,
    #walks-whernside h2,
    #walks-ingleborough h2 {
        text-align: center;
    }

    /* events page */

    .form-table input {
        margin-left: 3rem;
    }

    form {
        padding: 0;
    }

    form h4 {
        text-decoration: underline;
        margin-left: 3rem;
    }

    form legend,
    form fieldset {
        border: none;
        margin: 0;
        padding: 0;
    }

    #flex-form-gender {
        flex-direction: column;
    }

    #flex-form-gender-input {
        margin-left: 3rem;
    }

    .form-table label,
    form p {
        display: block;
        margin-left: 3rem;
        font-size: 20px;
    }

    .form-radio input,
    #post-radio-other {
        margin: 0;
    }

    /* form thank you page */

    #thank-you h2 {
        font-size: 30px;
        padding: 0 1rem;
    }

    #thank-you p {
        font-size: 20px;
        padding: 0 1rem;
    }
}

